--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -2,6 +2,7 @@
 body{
     padding: 0;
     margin: 0;
+    font-family: "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", Arial, sans-serif;
 }
 
 :root{
